Minor change for the website to work locally aswell.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <title>ItemSlide - jQuery plugin for a touch enabled carousel</title>
 
-    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
     <!--Dependinces--->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <script src="src/itemslide.min.js"></script>
 
