Improved springy panning on edges and cleaned code.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
-<html>
+<html lang="en-US">
+
 
 <head>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
     <title>ItemSlide - jQuery plugin for a touch enabled carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
+    <!--Styles--->
+    <link href="website-src/layout.css" rel="stylesheet" />
+    <link href="website-src/sliding.css" rel="stylesheet" />
+
     <!--Dependinces--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-    <script src="src/itemslide.min.js"></script>
-
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
 
-    <!--Website Files-->
-    <link href="website-src/layout.css" rel="stylesheet" />
-    <link href="website-src/sliding.css" rel="stylesheet" />
+    <script src="src/itemslide.min.js"></script>
+
+
+
+
+
+    <!--Website JS--->
     <script src="website-src/sliding.js"></script>
 
 
