--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html lang="en-US">
-
-
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
-    <title>ItemSlide - jQuery plugin for a touch enabled carousel</title>
+    <title>ItemSlide - jQuery plugin for a touch carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
@@ -74,7 +72,7 @@
 
     <div id="welcome">
         <span class="content">
-        <span id="maintitle">jQuery plugin for a touch enabled carousel.</span><br/><br/>
+        <span id="maintitle">jQuery plugin for a touch carousel.</span><br/><br/>
             <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
         </span>
     </div>
