Added new swipe out feature. also added bower.

--- a/examples/simple_carousel/index.html
+++ b/examples/simple_carousel/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Full Screen Example</title>
+    <title>Simple Carousel Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -9,14 +9,13 @@
 
 
     <!--CSS--->
-    <link href="main.css" rel="stylesheet" />
 
+    <link href="../../website-src/sliding.css" rel="stylesheet" />
 
 
     <!--Plugins--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    
-    
+
     <script src="../../dist/itemslide.min.js"></script>
     <script src="../../dependencies/jquery.mousewheel.min.js"></script>
 
@@ -25,26 +24,43 @@
 
 </head>
 
-<body>
+<body style="font-family:Arial;">
 
-    <div id="frame">
+    <div id="scrolling">
+        <!--Slider--->
         <ul>
-            <li style="background-color:#FF3B30;">
+            <li>
+                Swipe
 
-                    <h1>Swipe me</h1>
-
-            </li>
-            <li style="background-color:#1D62F0;">
 
             </li>
-            <li style="background-color:#36EB7D;">
+
+
+
+            <li>
+
+
+                Scroll
+
+
 
             </li>
-            <li style="background-color:#FE8C37;"><br>
-                <h1><a href="http://itemslide.github.io/">Website</a></h1>
+
+            <li>
+                Simple
+
+
+            </li>
+
+            <li>
+                Example
+            </li>
+            <li>
+                ItemSlide
             </li>
         </ul>
     </div>
+
 </body>
 
 </html>
