--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <!--Dependinces--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--<script src="dependencies/jquery-1.11.1.min.js"></script>-->
     <!--Optional--->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
 
-    <script src="src/itemslide.min.js"></script>
-
+    <script src="dist/itemslide.min.js"></script>
 
 
 
@@ -64,17 +64,16 @@
 
 
         <span id="downloadarea">
-        <a href="src/itemslide.min.js" id="download">DOWNLOAD</a><br/>
-        just 5KB minified
+        <a href="src/itemslide.min.js" id="download">DOWNLOAD</a> (8K)
         </span>
 
     </header>
 
     <div id="welcome">
-        <span class="content">
-        <span id="maintitle">jQuery plugin for a touch carousel.</span><br/><br/>
+        <span class="content"><img id="main-img" src="website-src/img/welcome.svg"/>
+        <div id="maintitle">jQuery plugin for a <span style="font-weight:400;">touch carousel</span></span><br/><br/>
             <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
-        </span>
+        </div>
     </div>
 
 
@@ -83,7 +82,7 @@
         <ul>
             <li>
                 Swipe
-                <br/>
+
 
             </li>
 
@@ -94,6 +93,12 @@
 
                 Scroll
 
+
+
+            </li>
+
+            <li>
+                Swipe Up
 
 
             </li>
