Fixed bug and added swipeout event.

--- a/tests/index.html
+++ b/tests/index.html
@@ -56,8 +56,8 @@
 
     <div id="welcome">
         <span class="content"><img id="main-img" src="../website-src/img/welcome.svg"/>
-        <div id="maintitle">jQuery plugin for a <span style="font-weight:400;">touch carousel</span></span><br/><br/>
-            <span class="menu"><a href="../examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+        <div id="maintitle">Make your changes in the <span style="font-weight:400;">/src folder</span></span>
+
         </div>
     </div>
 
