Added thumbnails for social networks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
+    <!--Thumbnails--->
+    <link rel="image_src" href="http://itemslide.github.io/website-src/img/image.jpg" />
+    <meta property="og:image" content="http://itemslide.github.io/website-src/img/image.jpg" />
+    <meta name="twitter:image:src" content="http://itemslide.github.io/website-src/img/image.jpg"/>
+    <!--Thumbnails until here--->
+
+
     <title>ItemSlide - jQuery plugin for a touch carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
