Added a vanilla version :)

--- a/tests/index.html
+++ b/tests/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
-    <title>ItemSlide - jQuery plugin for a touch carousel</title>
+    <title>ItemSlide - Testing</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
@@ -13,15 +13,20 @@
     <link href="../website-src/layout.css" rel="stylesheet" />
     <link href="../website-src/sliding.css" rel="stylesheet" />
 
-    <!--Dependinces--->
+    <!--Dependencies--->
+    <!--Include jQuery or Vanilla((Based on Zepto) Does not support swipe out)--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!--<script src="dependencies/jquery-1.11.1.min.js"></script>-->
+    <!--<script src="../src/vanilla.js"></script>-->
+
+
+
     <!--Optional--->
+    <!--Works only with jQuery--->
     <script src="../dependencies/jquery.mousewheel.min.js"></script>
 
+    <!--Plugin src--->
     <script src="../src/itemslide.js"></script>
-    <script src="../src/slideout.js"></script>
-
+    <script src="../src/slideout.js"></script><!--Slide Out only compatible with jQuery--->
 
 
 
