--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Thumbnails until here--->
 
 
-    <title>ItemSlide - jQuery plugin for a touch carousel</title>
+    <title>ItemSlide.js - JavaScript touch carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
@@ -19,14 +19,18 @@
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
 
-    <!--Dependinces--->
+
+    <!--Dependencies--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--<script src="dependencies/jquery-1.11.1.min.js"></script>-->
+
+
     <!--Optional--->
-    <script src="dependencies/jquery.mousewheel.min.js"></script>
+    <script src="dependencies/jquery.mousewheel.min.js"></script><!--Mousewheel compatible only with jQuery--->
+
 
     <script src="dist/itemslide.min.js"></script>
-
+    <!--<script src="dist/itemslide.vanilla.min.js"></script>-->
 
 
 
@@ -71,14 +75,14 @@
 
 
         <span id="downloadarea">
-        <a href="dist/itemslide.min.js" id="download">DOWNLOAD</a> (8K)
+        <a href="website-src/download.html" id="download">DOWNLOAD</a> (8K)
         </span>
 
     </header>
 
     <div id="welcome">
         <span class="content"><img id="main-img" src="website-src/img/welcome.svg"/>
-        <div id="maintitle">jQuery plugin for a <span style="font-weight:400;">touch carousel</span></span><br/><br/>
+        <div id="maintitle">A simple and beautiful <span style="font-weight:400;">touch carousel</span></span><br/><br/>
             <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
         </div>
     </div>
