Swipe Out now compatible with Vanilla, Bug Fix.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
     <!--Dependencies--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!--<script src="dependencies/jquery-1.11.1.min.js"></script>-->
+
 
 
     <!--Optional--->
-    <script src="dependencies/jquery.mousewheel.min.js"></script><!--Mousewheel compatible only with jQuery--->
+    <!--Mousewheel compatible only with jQuery--->
+    <script src="dependencies/jquery.mousewheel.min.js"></script>
 
 
     <script src="dist/itemslide.min.js"></script>
