--- a/tests/index.html
+++ b/tests/index.html
@@ -14,7 +14,7 @@
     <link href="../website-src/sliding.css" rel="stylesheet" />
 
     <!--Dependencies--->
-    <!--Include jQuery or Vanilla((Based on Zepto) Does not support swipe out)--->
+    <!--Include jQuery or Vanilla((Based on Zepto))--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--<script src="../src/vanilla.js"></script>-->
 
@@ -26,7 +26,7 @@
 
     <!--Plugin src--->
     <script src="../src/itemslide.js"></script>
-    <script src="../src/slideout.js"></script><!--Slide Out only compatible with jQuery--->
+    <script src="../src/slideout.js"></script>
 
 
 
