--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
-    <!--Thumbnails--->
+    <!--Thumbnails-->
     <link rel="image_src" href="http://itemslide.github.io/website-src/img/image.jpg" />
     <meta property="og:image" content="http://itemslide.github.io/website-src/img/image.jpg" />
     <meta name="twitter:image:src" content="http://itemslide.github.io/website-src/img/image.jpg"/>
-    <!--Thumbnails until here--->
+    <!--Thumbnails until here-->
 
 
     <title>ItemSlide.js - JavaScript touch carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
-    <!--Styles--->
+    <!--Styles-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
 
 
-    <!--Dependencies--->
+    <!--Dependencies-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 
-    <!--Optional--->
-    <!--Mousewheel compatible only with jQuery--->
+    <!--Optional-->
+    <!--Mousewheel compatible only with jQuery-->
     <script src="dependencies/jquery.mousewheel.min.js"></script>
 
 
@@ -35,7 +35,7 @@
 
 
 
-    <!--Website JS--->
+    <!--Website JS-->
     <script src="website-src/sliding.js"></script>
 
 
@@ -71,7 +71,7 @@
         </table>
 
 
-        <!--END OF BUTTONS MENU--->
+        <!--END OF BUTTONS MENU-->
 
 
 
@@ -90,7 +90,7 @@
 
 
     <div id="scrolling">
-        <!--Slider--->
+        <!--Slider-->
         <ul>
             <li>
                 Swipe
