Optimized website for social networks

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
     <!--Thumbnails-->
+
+    <meta name="description" content="A simple and beautiful JavaScript touch carousel">
+
     <link rel="image_src" href="http://itemslide.github.io/website-src/img/image.jpg" />
+
+
+    <meta property="og:type" content="website" />
+
+    <meta property="og:title" content="ItemSlide.js - JavaScript touch carousel"/>
     <meta property="og:image" content="http://itemslide.github.io/website-src/img/image.jpg" />
-    <meta name="twitter:image:src" content="http://itemslide.github.io/website-src/img/image.jpg"/>
+    <meta property="og:url" content="http://itemslide.github.io/" />
+    <meta property="og:description" content="A simple and beautiful JavaScript touch carousel"/>
+
+    <meta name="twitter:image:src" content="http://itemslide.github.io/website-src/img/image.jpg" />
+    <meta name="twitter:description" content="A simple and beautiful JavaScript touch carousel">
     <!--Thumbnails until here-->
 
 
