Cleaner code and grunt support

--- a/examples/simple_carousel/index.html
+++ b/examples/simple_carousel/index.html
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <script src="../../dist/itemslide.min.js"></script>
-    <script src="../../dependencies/jquery.mousewheel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
     <!--Scripts--->
     <script src="sliding.js"></script>
