--- a/tests/index.html
+++ b/tests/index.html
@@ -22,7 +22,7 @@
 
     <!--Optional--->
     <!--Works only with jQuery--->
-    <script src="../dependencies/jquery.mousewheel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
     <!--Plugin src--->
     <script src="../src/itemslide.js"></script>
