--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -18,7 +18,7 @@
     
     
     <script src="../../dist/itemslide.min.js"></script>
-    <script src="../../dependencies/jquery.mousewheel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
     <!--Scripts--->
     <script src="sliding.js"></script>
