--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!--Optional-->
     <!--Mousewheel compatible only with jQuery-->
-    <script src="dependencies/jquery.mousewheel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
 
     <script src="dist/itemslide.min.js"></script>
