Fixed minor bug - ref #12

--- a/website-src/download.html
+++ b/website-src/download.html
@@ -69,7 +69,7 @@
 
 
 
-    <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
+    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
 
 </body>
 
