--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </ul>
     </div>
 
-    <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
+    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
 
 
 
