--- a/tests/index.html
+++ b/tests/index.html
@@ -20,7 +20,7 @@
 
 
     <!--Optional--->
-    <!--Works only with jQuery--->
+    <!--Mousewheel works only with jQuery--->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
     <!--Plugin src--->
@@ -97,7 +97,7 @@
         </ul>
     </div>
 
-    <div id="fotter" align="center">Created by Nir Lichtman. Design by Idan Abarbanel.</div>
+    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
 
 
 
