New website design

--- a/website-src/download.html
+++ b/website-src/download.html
@@ -20,32 +20,33 @@
     <header>
 
 
-        <a style="color:#FFF;text-decoration:none;" href="../index.html"><div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div></a>
+        <a style="color:#FFF;text-decoration:none;" href="../index.html">
+            <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
+            </div>
+            </a>
+            <table id="buttons-menu">
+                <tr>
+                    <td>
+                        <a id="docs" href="../docs/index.html">
+                            Docs
+                        </a>
+                    </td>
+                    <td>
+                        <a id="github" href="https://github.com/itemslide/itemslide.github.io">
+                            Github
+                        </a>
+                    </td>
+                </tr>
+            </table>
 
 
 
 
-        <table id="buttons-menu">
-            <tr>
-                <td>
-                    <a id="docs" href="../docs/index.html">
-                        <table>
-                            <tr><td><img src="../website-src/img/docs.svg" /></td></tr><tr><td><span class="button-text">Docs</span></td></tr>
-                        </table>
-                    </a>
-                </td>
-                <td>
-                    <a id="github" href="https://github.com/itemslide/itemslide.github.io">
-                        <table>
-                                <tr><td><img src="../website-src/img/octocat.svg" /></td></tr><tr><td><span class="button-text">Github</span></td></tr>
-                        </table>
-                    </a>
-                </td>
-            </tr>
-        </table>
 
 
-        <!--END OF BUTTONS MENU--->
+
+
+        <!--END OF BUTTONS MENU-->
 
 
 
