--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en-US">
+
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
@@ -8,10 +9,10 @@
     <meta name="description" content="A simple and beautiful JavaScript touch carousel">
     <link rel="image_src" href="http://itemslide.github.io/website-src/img/image.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ItemSlide.js - JavaScript touch carousel"/>
+    <meta property="og:title" content="ItemSlide.js - JavaScript touch carousel" />
     <meta property="og:image" content="http://itemslide.github.io/website-src/img/image.jpg" />
     <meta property="og:url" content="http://itemslide.github.io/" />
-    <meta property="og:description" content="A simple and beautiful JavaScript touch carousel"/>
+    <meta property="og:description" content="A simple and beautiful JavaScript touch carousel" />
 
     <meta name="twitter:image:src" content="http://itemslide.github.io/website-src/img/image.jpg" />
     <meta name="twitter:description" content="A simple and beautiful JavaScript touch carousel">
@@ -51,29 +52,30 @@
     <header>
 
 
-        <a style="color:#FFF;text-decoration:none;" href="index.html"><div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div></a>
+        <a style="color:#FFF;text-decoration:none;" href="index.html">
+            <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
+            </div>
+          </a>
+            <table id="buttons-menu">
+                <tr>
+                    <td>
+                        <a id="docs" href="docs/index.html">
+                            Docs
+                        </a>
+                    </td>
+                    <td>
+                        <a id="github" href="https://github.com/itemslide/itemslide.github.io">
+                            Github
+                        </a>
+                    </td>
+                </tr>
+            </table>
 
 
 
 
-        <table id="buttons-menu">
-            <tr>
-                <td>
-                    <a id="docs" href="docs/index.html">
-                        <table>
-                            <tr><td><img src="website-src/img/docs.svg" /></td></tr><tr><td><span class="button-text">Docs</span></td></tr>
-                        </table>
-                    </a>
-                </td>
-                <td>
-                    <a id="github" href="https://github.com/itemslide/itemslide.github.io">
-                        <table>
-                                <tr><td><img src="website-src/img/octocat.svg" /></td></tr><tr><td><span class="button-text">Github</span></td></tr>
-                        </table>
-                    </a>
-                </td>
-            </tr>
-        </table>
+
+
 
 
         <!--END OF BUTTONS MENU-->
@@ -87,10 +89,15 @@
     </header>
 
     <div id="welcome">
-        <span class="content"><img id="main-img" src="website-src/img/welcome.svg"/>
-        <div id="maintitle">A simple and beautiful <span style="font-weight:400;">touch carousel</span></span><br/><br/>
-            <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
-        </div>
+        <span class="content">
+        <img id="main-img" src="website-src/img/hero.svg"/>
+        <div id="maintitle">simple & beautiful<br/><span style="font-weight:400;">touch carousel</span><br/>
+        <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+
+
+
+        </span>
+    </div>
     </div>
 
 
@@ -130,8 +137,6 @@
     </div>
 
     <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
-
-
 
 
     <script>
