Optimized for trackpad and fixed bug.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
+    <!--Keywords-->
+    <meta name="keywords" content="JavaScript,carousel,mobile,touch,slide,jQuery">
+
     <!--Thumbnails-->
     <meta name="description" content="A simple and beautiful JavaScript touch carousel">
     <link rel="image_src" href="http://itemslide.github.io/website-src/img/image.jpg" />
