--- a/tests/index.html
+++ b/tests/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <div id="welcome">
-        <span class="content"><img id="main-img" src="../website-src/img/welcome.svg"/>
+        <span class="content">
         <div id="maintitle">Make your changes in the <span style="font-weight:400;">/src folder</span></span>
 
         </div>
