Small addition to website and added outerWidth to vanilla lib

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </ul>
     </div>
 
-    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
+    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.</div>
 
 
     <script>
