--- a/website-src/download.html
+++ b/website-src/download.html
@@ -70,7 +70,7 @@
 
 
 
-    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://idan.twomini.com/">Idan Abarbanel</a>.</div>
+    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.</div>
 
 </body>
 
