Updated site with social buttons.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     </div>
 
-
+    <!--Here is the carousel-->
     <div id="scrolling">
         <!--Slider-->
         <ul>
@@ -112,8 +112,26 @@
             </li>
         </ul>
     </div>
+    <!--//-->
 
-    <div id="fotter" align="center">Created by <a href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.</div>
+
+    <!--Fotter from here-->
+    <div id="fotter" align="center">
+
+    <!--Social Links-->
+    <span id="links">
+    <iframe src="https://ghbtns.com/github-btn.html?user=itemslide&repo=itemslide.github.io&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <!--Twitter-->
+    <div id="twitterwrap">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://itemslide.github.io/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemsilde">Tweet</a></div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    </span>
+
+    Created by <a id="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a id="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+
+    </div>
+    <!--Fotter untill here-->
 
 
     <script>
@@ -128,5 +146,4 @@
     </script>
 
 </body>
-
 </html>
