Left/right arrows enhancement - arrows inserted in parameters, will be hidden on left or right border.

--- a/index.html
+++ b/index.html
@@ -85,14 +85,19 @@
     <div id="welcome">
         <span class="content">
         <img id="main-img" src="website-src/img/hero.svg"/>
-        <div id="maintitle">simple & beautiful<br/><span style="font-weight:400;">touch carousel</span><br/>
-        <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
-        </span>
-    </div>
+        <div id="maintitle">simple & beautiful<br/>
+            <span style="font-weight:400;">touch carousel</span><br/>
+            <span class="menu">
+                <a href="examples/fullscreen_navigation/index.html">Full Screen Example</a>
+            </span>
+        </div>
     </div>
 
     <!--Here is the carousel-->
     <div id="scrolling">
+        <!-- Arrow Navigator -->
+        <div class="icon__arrow-left do-scroll-left" role="button"></div>
+        <div class="icon__arrow-right do-scroll-right" role="button"></div>
         <!--Slider-->
         <ul>
             <li>
