Moved to Browserify, split the code to modules.

--- a/website-src/download.html
+++ b/website-src/download.html
@@ -51,7 +51,7 @@
 
 
         <span id="downloadarea">
-        <a href="download.html" id="download">DOWNLOAD</a> (8K)
+        <a href="download.html" id="download">DOWNLOAD</a> (13K)
         </span>
 
     </header>
@@ -60,10 +60,10 @@
 
 
 
-    <div id="welcome"><br/>
-    Choose a version<br/><br/>
-        <span class="menu"><a href="../dist/itemslide.min.js">jQuery Version (8K)</a></span><br/><br/>
-        <span class="menu"><a href="../dist/itemslide.vanilla.min.js">Vanilla Version (24K)</a></span>
+    <div id="welcome"><br/>Requires jQuery or Zepto.<br/><br/>
+
+        <span class="menu"><a href="../dist/itemslide.min.js">DOWNLOAD</a></span>
+
     </div>
 
 
@@ -84,7 +84,7 @@
 
     </span>
 
-    Created by <a id="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a id="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+    Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
 
     </div>
     <!--Fotter untill here-->
