--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html lang="en-US">
-
 <head>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
@@ -21,7 +19,6 @@
     <meta name="twitter:description" content="A simple and beautiful JavaScript touch carousel">
     <!--Thumbnails until here-->
 
-
     <title>ItemSlide.js - JavaScript touch carousel</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
@@ -29,30 +26,20 @@
     <!--Styles-->
     <link href="website-src/layout.css" rel="stylesheet" />
     <link href="website-src/sliding.css" rel="stylesheet" />
-
-
     <!--Dependencies-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-
     <!--Optional-->
     <!--Mousewheel compatible only with jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
-
     <script src="dist/itemslide.min.js"></script>
-    <!--<script src="dist/itemslide.vanilla.min.js"></script>-->
-
-
     <!--Website JS-->
     <script src="website-src/sliding.js"></script>
-
 
 </head>
 
 <body>
     <header>
-
         <a style="color:#FFF;text-decoration:none;" href="index.html">
             <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
             </div>
@@ -72,24 +59,23 @@
                 </tr>
             </table>
 
-
         <!--END OF BUTTONS MENU-->
-
 
         <span id="downloadarea">
         <a href="website-src/download.html" id="download">DOWNLOAD</a> (13K)
         </span>
-
     </header>
 
     <div id="welcome">
         <span class="content">
         <img id="main-img" src="website-src/img/hero.svg"/>
-        <div id="maintitle">simple & beautiful<br/><span style="font-weight:400;">touch carousel</span><br/>
-        <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+        <div id="maintitle">simple & beautiful<br/>
+            <span style="font-weight:400;">touch carousel</span><br/>
+            <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+        </div>
         </span>
     </div>
-    </div>
+
 
     <!--Here is the carousel-->
     <div id="scrolling">
@@ -125,14 +111,11 @@
     <div id="twitterwrap">
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://itemslide.github.io/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemsilde">Tweet</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
     </span>
 
-    Created by <a id="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a id="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
-
+        Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
     </div>
     <!--Fotter untill here-->
-
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
