Touchpad swiping now less sensitive, ref #17

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,18 +1,18 @@
 <!--This file is for testing your code--->
 <html lang="en-US">
+
 <head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
     <title>ItemSlide - Testing</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet'
-          type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
     <!--Styles--->
-    <link href="../website-src/layout.css" rel="stylesheet"/>
-    <link href="../website-src/sliding.css" rel="stylesheet"/>
+    <link href="../website-src/layout.css" rel="stylesheet" />
+    <link href="../website-src/sliding.css" rel="stylesheet" />
 
     <!--Dependencies--->
     <!--Include jQuery or Zepto--->
@@ -21,7 +21,7 @@
 
     <!--Optional--->
     <!--Mousewheel works only with jQuery--->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js"></script>
 
     <!--Browserify bundle--->
     <script src="../dist/itemslide.js"></script>
@@ -32,55 +32,53 @@
 </head>
 
 <body>
-<header>
-    <a style="color:#FFF;text-decoration:none;" href="index.html">
-        <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div>
-    </a>
+    <header>
+        <a style="color:#FFF;text-decoration:none;" href="index.html">
+            <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span></div>
+        </a>
 
-    <!--END OF BUTTONS MENU--->
+        <!--END OF BUTTONS MENU--->
 
         <span id="downloadarea">
         Testing
         </span>
 
-</header>
+    </header>
 
-<div id="welcome">
+    <div id="welcome">
         <span class="content">
             <div id="maintitle">
                 Make your changes in the <span style="font-weight:400;">/src folder</span>
-            </div>
-        </span>
-</div>
+    </div>
+    </span>
+    </div>
 
 
-<div id="scrolling">
-    <!--Slider--->
-    <ul>
-        <li>
-            Swipe
-        </li>
-        <li>
-            Scroll
-        </li>
+    <div id="scrolling">
+        <!--Slider--->
+        <ul>
+            <li>
+                Swipe
+            </li>
+            <li>
+                Scroll
+            </li>
 
-        <li>
-            Swipe Up
-        </li>
-        <li>
-            Click to Slide
-        </li>
-        <li>
-            Mobile friendly
-        </li>
-    </ul>
-</div>
+            <li>
+                Swipe Up
+            </li>
+            <li>
+                Click to Slide
+            </li>
+            <li>
+                Mobile friendly
+            </li>
+        </ul>
+    </div>
 
-<div id="fotter" align="center">Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by
-    <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
-</div>
-
-
+    <div id="fotter" align="center">Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by
+        <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+    </div>
 </body>
 
 </html>
