--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <img id="main-img" src="website-src/img/hero.svg"/>
         <div id="maintitle">simple & beautiful<br/>
             <span style="font-weight:400;">touch carousel</span><br/>
-            <span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>
+            <span id="example-link"><a href="examples/fullscreen_navigation/index.html">Fullscreen Example</a></span>
+            <!--<span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>-->
         </div>
         </span>
     </div>
