Fixed scrolling on Firefox and Edge

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!--Slider-->
         <ul>
             <li>
-                Swipe
+                Swipe  <!-- Maybe add images or something here -->
             </li>
             <li>
                 Scroll
