--- a/website-src/download.html
+++ b/website-src/download.html
@@ -5,7 +5,7 @@
 
     <title>ItemSlide.js - Download</title>
 
-    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
 
 
     <!--Website Files-->
