Fixed addSlide bug, closes issue #42

--- a/tests/index.html
+++ b/tests/index.html
@@ -76,8 +76,8 @@
         </ul>
     </div>
 
-    <div id="fotter" align="center">Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by
-        <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+    <div id="fotter" align="center">
+    Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
     </div>
 </body>
 
