--- a/website-src/download.html
+++ b/website-src/download.html
@@ -84,7 +84,7 @@
 
     </span>
 
-    Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+    Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
 
     </div>
     <!--Fotter untill here-->
