--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script src="dist/itemslide.min.js"></script>
     <!--Website JS-->
-    <script src="website-src/sliding.js"></script>
+    <script src="website-src/sliding.js"></script>  <!-- Here the carousel is initialized -->
 
 </head>
 
@@ -114,7 +114,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </span>
 
-        Created by <a class="hrefs" href="https://twitter.com/nirl9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co.il/portfolio/">Iddan Abarbanel</a>.
+        Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
     </div>
     <!--Fotter untill here-->
 
