--- a/tests/index.html
+++ b/tests/index.html
@@ -17,6 +17,7 @@
     <!--Dependencies--->
     <!--Include jQuery or Zepto--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--<script src="http://zeptojs.com/zepto.min.js"></script>-->
 
 
     <!--Optional--->
@@ -71,6 +72,8 @@
                 Click to Slide
             </li>
             <li>
+                Mobile friendly
+            </li><li>
                 Mobile friendly
             </li>
         </ul>
