--- a/examples/left_carousel/index.html
+++ b/examples/left_carousel/index.html
@@ -7,12 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-
     <!--CSS--->
 
     <link href="../../website-src/sliding.css" rel="stylesheet" />
-
-
     <!--Plugins--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -25,31 +22,17 @@
 </head>
 
 <body style="font-family:Arial;">
-
     <div id="scrolling">
         <!--Slider--->
         <ul>
             <li>
                 Swipe
-
-
             </li>
-
-
-
-            <li>
-
-
-                Scroll
-
-
-
+            <li> Scroll
             </li>
 
             <li>
                 Simple
-
-
             </li>
 
             <li>
@@ -57,6 +40,9 @@
             </li>
             <li>
                 ItemSlide
+            </li>
+            <li>
+                Left Sided
             </li>
         </ul>
     </div>
