--- a/website-src/download.html
+++ b/website-src/download.html
@@ -60,7 +60,7 @@
 
 
 
-    <div id="welcome"><br/>Requires jQuery or Zepto.<br/><br/>
+    <div id="welcome"><br/>ItemSlide requires jQuery or Zepto.<br/><br/>
 
         <span class="menu"><a href="../dist/itemslide.min.js">DOWNLOAD</a></span>
 
