Resolving issue #83 and some other minor changes

--- a/testing/index.html
+++ b/testing/index.html
@@ -1,9 +1,8 @@
-<!--This file is for testing your code--->
+<!--This file is for testing your code-->
 <html lang="en-US">
 
 <head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
     <title>ItemSlide - Testing</title>
@@ -49,39 +48,38 @@
     <div id="welcome">
         <span class="content">
             <div id="maintitle">
-                Make your changes in the <span style="font-weight:400;">/src folder</span>
+                Make your changes in the <span style="font-weight:400;">/src folder</span><br/>
+                Take a look at CONTRIBUTING.md
+            </div>
+        </span>
     </div>
-    </span>
-    </div>
-
 
     <div id="scrolling">
-        <!--Slider--->
+        <!-- Slider -->
         <ul>
             <li>
-                Swipe
+                Slide 1
             </li>
             <li>
-                Scroll
-            </li>
-
-            <li>
-                Swipe Up
+                Slide 2
             </li>
             <li>
-                Click to Slide
+                Slide 3
             </li>
             <li>
-                Mobile friendly
+                Slide 4
             </li>
             <li>
-                Mobile friendly
+                Slide 5
+            </li>
+            <li>
+                Slide 6
             </li>
         </ul>
     </div>
 
     <div id="fotter" align="center">
-        Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
+        Testing
     </div>
 </body>
 
