--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <div id="maintitle">simple & beautiful<br/>
             <span style="font-weight:400;">touch carousel</span><br/>
             <span id="example-link"><a href="examples/fullscreen_navigation/index.html">Fullscreen Example</a></span>
-            <!--<span class="menu"><a href="examples/fullscreen_navigation/index.html">Full Screen Example</a></span>-->
         </div>
         </span>
     </div>
@@ -83,7 +82,7 @@
         <!--Slider-->
         <ul>
             <li>
-                Swipe  <!-- Maybe add images or something here -->
+                Swipe
             </li>
             <li>
                 Scroll
@@ -99,35 +98,16 @@
             </li>
         </ul>
     </div>
-    <!--//-->
 
-
-    <!--Fotter from here-->
     <div id="fotter" align="center">
-
-    <!--Social Links-->
     <span id="links">
     <iframe src="https://ghbtns.com/github-btn.html?user=itemslide&repo=itemslide.github.io&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-    <!--Twitter-->
     <div id="twitterwrap">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://itemslide.github.io/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemsilde">Tweet</a></div>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://itemslide.github.io/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemslide">Tweet</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </span>
 
-        Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
+        Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://aniddan.com/">Iddan Aaronsohn</a>.
     </div>
-    <!--Fotter untill here-->
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-56825472-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-
 </body>
 </html>
