--- a/license.html
+++ b/license.html
@@ -1,6 +1,13 @@
+<html>
+<head>
+<title>ItemSlide's License</title>
+</head>
+<body>
+
+
 The MIT License (MIT)
 
-Copyright (c) 2015 Nir Lichtman <nir.lich@gmail.com>
+Copyright (c) 2019 Nir Lichtman <nir.lich@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -19,3 +26,6 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
+
+</body>
+</html>
