--- a/license.html
+++ b/license.html
@@ -5,27 +5,26 @@
 <body>
 
 
-The MIT License (MIT)
+    The MIT License (MIT) <br/>
 
-Copyright (c) 2019 Nir Lichtman <nir.lich@gmail.com>
+    Copyright (c) 2019 Nir Lichtman &lt;nir.lich@gmail.com&gt; <br/>
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
+    Permission is hereby granted, free of charge, to any person obtaining a copy <br/>
+    of this software and associated documentation files (the "Software"), to deal <br/>
+    in the Software without restriction, including without limitation the rights <br/>
+    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell <br/>
+    copies of the Software, and to permit persons to whom the Software is <br/>
+    furnished to do so, subject to the following conditions: <br/>
+ <br/>
+ The above copyright notice and this permission notice shall be included in all <br/>
+ copies or substantial portions of the Software. <br/>
+ <br/>
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR <br/>
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, <br/>
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE <br/>
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER <br/>
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, <br/>
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 </body>
 </html>
