WebSite: Fixed URLs according to new itemslide.org domain

--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -38,7 +38,7 @@
 
             </li>
             <li style="background-color:#FE8C37;"><br>
-                <h1><a href="http://itemslide.github.io/">Website</a></h1>
+                <h1><a href="https://itemslide.org/">Website</a></h1>
             </li>
         </ul>
     </div>
