--- a/website-src/download.html
+++ b/website-src/download.html
@@ -32,7 +32,7 @@
                         </a>
                     </td>
                     <td>
-                        <a id="github" href="https://github.com/itemslide/itemslide.github.io">
+                        <a id="github" href="https://github.com/nir9/itemslide">
                             Github
                         </a>
                     </td>
@@ -76,10 +76,10 @@
 
     <!--Social Links-->
     <span id="links">
-    <iframe src="https://ghbtns.com/github-btn.html?user=itemslide&repo=itemslide.github.io&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=nir9&repo=itemslide&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
     <!--Twitter-->
     <div id="twitterwrap">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://itemslide.github.io/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemsilde">Tweet</a></div>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://itemslide.org/" data-text="A simple and beautiful JavaScript touch carousel" data-hashtags="itemsilde">Tweet</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     </span>
