--- a/examples/fullscreen_navigation/index.html
+++ b/examples/fullscreen_navigation/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <title>Full Screen Example</title>
     <meta charset="utf-8">
@@ -7,23 +6,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <!--CSS--->
     <link href="main.css" rel="stylesheet" />
-
-
-
-    <!--Plugins--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     
     
-    <script src="../../dist/itemslide.js"></script>
+    <script src="../../dist/itemslide.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.min.js"></script>
 
-    <!--Scripts--->
     <script src="sliding.js"></script>
 
 </head>
-
 <body>
 
     <div id="frame">
