Bundle: Add webpack (closes #92)

--- a/testing/index.html
+++ b/testing/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js"></script>
 
     <!--Browserify bundle--->
-    <script src="../dist/itemslide.js"></script>
+    <script src="../dist/itemslide.min.js"></script>
 
     <!--Website JS--->
     <script src="../website-src/sliding.js"></script>
