--- a/website-src/download.html
+++ b/website-src/download.html
@@ -52,7 +52,7 @@
 
 
         <span id="downloadarea">
-        <a href="download.html" id="download">DOWNLOAD</a> (10K)
+        <a href="download.html" id="download" download>DOWNLOAD</a> (10K)
         </span>
 
     </header>
