--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 
-    <meta name="keywords" content="JavaScript,carousel,mobile,touch,slide,jQuery">
+    <meta name="keywords" content="JavaScript,carousel,mobile,touch,slide">
 
     <meta name="description" content="A simple and beautiful JavaScript touch carousel">
     <link rel="image_src" href="https://itemslide.org/website-src/img/image.jpg" />
