--- a/website-src/download.html
+++ b/website-src/download.html
@@ -7,71 +7,20 @@
     <title>ItemSlide.js - Download</title>
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel='stylesheet' type='text/css'>
-
-
-    <!--Website Files-->
-    <link href="layout.css" rel="stylesheet" /><!--layout--->
-    <link href="download.css" rel="stylesheet" /><!--layout--->
-
-
-
+    <link href="layout.css" rel="stylesheet" />
+    <link href="download.css" rel="stylesheet" />
 </head>
 
 <body>
     <header>
-
-
-        <a style="color:#FFF;text-decoration:none;" href="../index.html">
-            <div id="headertext">ItemSlide<span style="font-size:4.3vh;">.js</span>
-            </div>
-            </a>
-            <table id="buttons-menu">
-                <tr>
-                    <td>
-                        <a id="docs" href="../docs/index.html">
-                            Docs
-                        </a>
-                    </td>
-                    <td>
-                        <a id="github" href="https://github.com/nir9/itemslide">
-                            Github
-                        </a>
-                    </td>
-                </tr>
-            </table>
-
-
-
-
-
-
-
-
-        <!--END OF BUTTONS MENU-->
-
-
-
-        <span id="downloadarea">
-        <a href="download.html" id="download" download>DOWNLOAD</a> (10K)
-        </span>
-
+        <br>
+        <a id="headertext" href="../index.html">
+            ItemSlide.js
+        </a>
     </header>
-
-
-
-
-
     <div id="welcome"><br/>ItemSlide requires jQuery or Zepto.<br/><br/>
-
         <span class="menu"><a href="../dist/itemslide.min.js">DOWNLOAD</a></span>
-
     </div>
-
-
-
-
-
-
     <!--Fotter from here-->
     <div id="fotter" align="center">
 
@@ -85,11 +34,9 @@
 
     </span>
 
-    Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>. Design by <a class="hrefs" href="http://iddan.co/">Iddan Aharonson</a>.
+    Created by <a class="hrefs" href="https://github.com/nir9">Nir Lichtman</a>
 
     </div>
-    <!--Fotter untill here-->
-
 </body>
 
 </html>
