--- a/examples/left_carousel/index.html
+++ b/examples/left_carousel/index.html
@@ -10,8 +10,8 @@
     <!--CSS--->
 
     <link href="../../website-src/sliding.css" rel="stylesheet" />
-    <!--Plugins--->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
     <script src="../../dist/itemslide.min.js"></script>
 
