--- a/examples/two_carousels/index.html
+++ b/examples/two_carousels/index.html
@@ -7,20 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-
-    <!--CSS--->
-
     <link href="main.css" rel="stylesheet" />
 
-
-    <!--Plugins--->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
     <script src="../../dist/itemslide.min.js"></script>
 
-    <!--Scripts--->
     <script src="sliding.js"></script>
-
 </head>
 
 <body style="font-family:Arial;">
