Remove dependence on webpack

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="sliding.css" rel="stylesheet" />
 
-    <script src="../dist/itemslide.min.js"></script>
+    <script src="../itemslide.js"></script>
     <script src="sliding.js"></script>
 </head>
 <body>
