Refactor variables to all use camelCase

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			var element = document.querySelector("#scrolling ul");
 
 			itemslide = new Itemslide(element, {
-				swipe_out: true
+				swipeOut: true
 			});
 		});
 
